--- a/savorty/src/components/nav.module.css
+++ b/savorty/src/components/nav.module.css
@@ -2,7 +2,7 @@
     font-size: 2em;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    color: blue;
+    color: black;
     padding: 30px;
     box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.5);
 }
